# Air-guardian

./: .env.example  .gitignore  README.md  main.py  patrol_airspace.py  pyproject.toml  requirements.txt
AGvenv/: pyvenv.cfg
routes/: drones.py  health.py  nfz.py
src/: cli.py  main.py
utils/: database.py  debug_database.py  drones.py  models.py  nfz.py  setup.py
