[tool.poetry]
name = "src"
version = "0.1.0"
description = "A FastAPI application for air quality monitoring"
authors = [
    "fdessoy- <fdessoy-@hive.student.fi>",
    "zfarah <zfarah@hive.student.fi>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
dev = "cli:dev"
start = "cli:start"
test = "pytest"


# Option 1: Remove scripts and use poetry run commands directly
# [tool.poetry.scripts]
# dev = "uvicorn src.main:app --reload"  # This still won't work in Poetry scripts

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"