[tool.poetry]
name = "routes"
version = "0.1.0"
description = "Drone monitoring API middleware"
authors = [
    "fdessoy- <fdessoy-@hive.student.fi>",
    "zfarah <zfarah@hive.student.fi>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
psycopg = {extras = ["binary"], version = "^3.2.9"}
uvicorn = {extras = ["standard"], version = "^0.35.0"}
requests = "^2.32.4"
celery = "^5.5.3"
python-dotenv = "^1.1.1"
pydantic = "^2.5.0"
kombu = "^5.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"

# Poetry scripts expect Python callables, not shell commands
# Use direct commands instead:
# poetry run uvicorn main:air_guardian --reload
# poetry run celery -A patrol_airspace worker --beat --loglevel=info

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"